--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
 edition = "2021"
 
 [dependencies]
-ark-crypto-primitives = { version="0.5.0", features = ["merkle_tree"] }
+ark-bls12-381 = "0.5.0"
 ark-ff = "0.5.0"
-ark-poly = "0.5.0"
-ark-serialize = "0.5.0"
-ark-std ="0.5.0"
+ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh"] }
+ark-std = "0.5.0"
