--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2021"
 [dependencies]
 ark-bls12-381 = "0.5.0"
 ark-ff = "0.5.0"
-ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh"] }
+ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs"] }
 ark-std = "0.5.0"
+ark-relations = "0.5.0"
+ark-r1cs-std = "0.5.0"
