--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,15 @@ edition = "2021"
 ark-bls12-381 = "0.5.0"
 ark-ff = "0.5.0"
 ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs"] }
+ark-poly = "0.5.0"
 ark-std = "0.5.0"
 ark-relations = "0.5.0"
 ark-r1cs-std = "0.5.0"
+ark-bn254 = "0.5.0"
+
+[dev-dependencies]
+criterion = "0.4"
+
+[[bench]]
+name = "reed_solomon"
+harness = false
