--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,22 @@ edition = "2021"
 [dependencies]
 ark-bls12-381 = "0.5.0"
 ark-ff = "0.5.0"
-ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs"] }
+ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs", "sponge"] }
 ark-poly = "0.5.0"
 ark-std = "0.5.0"
 ark-relations = "0.5.0"
 ark-r1cs-std = "0.5.0"
 ark-bn254 = "0.5.0"
 
+[patch.crates-io]
+spongefish = { git = "https://github.com/arkworks-rs/spongefish" }
+
 [dev-dependencies]
 criterion = "0.4"
+
+[[bench]]
+name = "poseidon_hash"
+harness = false
 
 [[bench]]
 name = "reed_solomon"
