--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ ark-std = "0.5.0"
 ark-relations = "0.5.0"
 ark-r1cs-std = "0.5.0"
 ark-bn254 = "0.5.0"
+serde = { version = "1.0.0", features = ["derive"]}
+serde_json = "1.0"
 
 [patch.crates-io]
 spongefish = { git = "https://github.com/arkworks-rs/spongefish" }
