--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,10 @@ ark-r1cs-std = "0.5.0"
 ark-bn254 = "0.5.0"
 serde = { version = "1.0.0", features = ["derive"]}
 serde_json = "1.0"
-
-[patch.crates-io]
-spongefish = { git = "https://github.com/arkworks-rs/spongefish" }
+spongefish = { git = "https://github.com/arkworks-rs/spongefish", branch = "main" }
+spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", branch = "main", features = ["bls12-381"] }
+ark-serialize = "0.5.0"
+zeroize = { version = "1.5", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.4"
