--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 
 [dependencies]
 ark-bls12-381 = "0.5.0"
+ark-ec = "0.5.0"
 ark-ff = "0.5.0"
 ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs", "sponge"] }
 ark-poly = "0.5.0"
+ark-groth16 = "0.5.0"
 ark-std = "0.5.0"
 ark-relations = "0.5.0"
 ark-r1cs-std = "0.5.0"
