--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ spongefish = { git = "https://github.com/arkworks-rs/spongefish", branch = "main
 spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", branch = "main", features = ["bls12-381"] }
 ark-serialize = "0.5.0"
 zeroize = { version = "1.5", features = ["derive"] }
+rayon = { version = "1.11.0" }
+thiserror = "2.0.16"
+whir = { git = "https://github.com/WizardOfMenlo/whir", rev = "22c6758" }
 
 [dev-dependencies]
 criterion = "0.4"
