--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,39 +8,26 @@ include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
 edition = "2021"
 
 [dependencies]
-ark-bls12-381 = "0.5.0"
-ark-bn254 = "0.5.0"
 ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs", "sponge"] }
-ark-ec = "0.5.0"
+ark-ec = "0.5.0" # can remove later
 ark-ff = "0.5.0"
-ark-groth16 = "0.5.0"
+ark-groth16 = "0.5.0" # can remove later
 ark-poly = "0.5.0"
 ark-poly-commit = "0.5.0"
 ark-r1cs-std = "0.5.0"
 ark-relations = "0.5.0"
 ark-serialize = "0.5.0"
 ark-std = "0.5.0"
-num-bigint = "0.4.6"
-p3_code = { git = "https://github.com/succinctlabs/plonky3", package = "p3-code" }
-p3_brakedown = { git = "https://github.com/succinctlabs/plonky3", package = "p3-brakedown" }
-p3_field = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-field" }
-p3_goldilocks = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-goldilocks" }
-p3_matrix = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-matrix" }
-p3_mersenne_31 = { git = "https://github.com/succinctlabs/Plonky3", package = "p3-mersenne-31" }
-rand_chacha = "0.3"
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
 spongefish = { git = "https://github.com/arkworks-rs/spongefish", branch = "main" }
 spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", branch = "main", features = ["bls12-381"] }
-zeroize = { version = "1.5", features = ["derive"] }
 
 [dev-dependencies]
-criterion = "0.4"
+ark-bls12-381 = "0.5.0"
+ark-bn254 = "0.5.0"
 blake3 = "1.3"
-
-[[bench]]
-name = "poseidon_hash"
-harness = false
+criterion = "0.4"
 
 [[bench]]
 name = "reed_solomon"
