--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 [dependencies]
 ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs", "sponge"] }
 ark-ec = "0.5.0" # can remove later
-ark-ff = "0.5.0"
+ark-ff = "0.5"
 ark-groth16 = "0.5.0" # can remove later
 ark-poly = "0.5.0"
 ark-poly-commit = "0.5.0"
@@ -28,4 +28,9 @@ ark-bls12-381 = "0.5.0"
 ark-bn254 = "0.5.0"
 blake3 = "1.3"
 criterion = "0.7"
+
+[features]
+default = ["asm"]
+
+asm = ["ark-ff/asm"] 
 
