--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,13 @@ zeroize = { version = "1.5", features = ["derive"] }
 [dev-dependencies]
 ark-bls12-381 = "0.5.0"
 ark-bn254 = "0.5.0"
+blake3 = "1.3"
 criterion = "0.7"
+
+[features]
+default = ["asm"]
+
+asm = ["ark-ff/asm"] 
 
 [[bench]]
 name = "warp_rs"
