--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
 spongefish = { git = "https://github.com/arkworks-rs/spongefish", branch = "main" }
 spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", branch = "main", features = ["bls12-381"] }
-efficient-sumcheck = { git = "https://github.com/compsec-epfl/efficient-sumcheck.git", branch = "pairwise_compression_for_vsbw" }
+efficient-sumcheck = { git = "https://github.com/compsec-epfl/efficient-sumcheck.git" }
+#efficient-sumcheck = { path = "../space-efficient-sumcheck" }
 thiserror = "2.0.16"
 whir = { git = "https://github.com/WizardOfMenlo/whir", rev = "3d627d3" }
 zeroize = { version = "1.5", features = ["derive"] }
