--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
 spongefish = { git = "https://github.com/arkworks-rs/spongefish", rev="fce4bfed23b2deb9a9f174178b6c9f59f580cc81" }
 spongefish-poseidon = { git = "https://github.com/arkworks-rs/spongefish", package = "spongefish-poseidon", features = ["bls12-381"], rev = "fce4bfed23b2deb9a9f174178b6c9f59f580cc81" }
-efficient-sumcheck = { git = "https://github.com/compsec-epfl/efficient-sumcheck.git" }
+#efficient-sumcheck = { git = "https://github.com/compsec-epfl/efficient-sumcheck.git" }
+efficient-sumcheck = { path = "../space-efficient-sumcheck" }
 thiserror = "2.0.16"
 zeroize = { version = "1.5", features = ["derive"] }
 ark-codes = { git = "https://github.com/dmpierre/ark-codes.git" }
